# vec

./: .gitignore  .merlin  bsconfig.json  dune-project  dune.bsb  esy.json  package.json  vec.opam
.melange.eobjs/: .bsbuild  .sourcedirs.json
_esy/default/: build  install
esy.lock/: index.json
src/: vec.bs.js
test/: Test.re  TestRescript.bs.js  TestRescript.res  dune
